# Legal-Consultant

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260312_0001_init.py  20260416_0002_add_users_auth.py  20260417_0003_add_subscription_fields.py  20260417_0004_add_is_admin.py  20260417_0005_add_trial_ends_at.py  20260417_0006_add_password_reset.py
backend/app/: main.py
backend/app/api/v1/: analysis.py  auth.py  billing.py  consultation.py  documents.py  health.py  router.py
backend/app/core/: config.py  deps.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  document.py  user.py
backend/app/repositories/: document_repository.py
backend/app/schemas/: analysis.py  auth.py  consultation.py  document.py
backend/app/services/: auth.py  billing.py  email.py
backend/app/services/agents/: intents.py  workflows.py
backend/app/services/contract_analysis/: __init__.py  comparator.py  extractor.py
backend/app/services/evaluation/: answer_evaluator.py
backend/app/services/ingestion/: chunker.py  loaders.py  pipeline.py
backend/app/services/llm/: factory.py
backend/app/services/retrieval/: bm25_store.py  faiss_store.py  hybrid.py  types.py
backend/tests/: test_evaluator.py  test_hybrid.py  test_intents.py
docs/: architecture.md  deployment.md
evaluation/: chunking_benchmark.example.json
frontend/: Dockerfile  index.html  package-lock.json  (+2 more)
(+35 files in other folders)
